--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,12 @@
 	    
 	</dependency>
 
-  </dependencies>
+	<dependency>
+		<groupId>Assignment</groupId>
+		<artifactId>Assignment</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
+    </dependencies>
   
   
   <build>
